# proceedings_curation

./: .gitignore  Makefile  README.md  pyproject.toml
data/: README.md  metadata_index.csv  metadata_index.xlsx
data/source/: Proceedings index.xlsx  proceedings_index.xlsx  proceedings_metadata.xlsx
proceedings_curation/: extract_language_subset.py  pdfbox_extractor_modified.py  tesseract_extractor_modified.py  utils.py
proceedings_curation/extractors/: __init__.py  pdfbox_extractor_modified.py  tesseract_extractor_modified.py  utils.py
proceedings_curation/language_detectors/: language_detectors.py
proceedings_curation/language_filters/: language_filters.py
proceedings_curation/scripts/: README.md  compare_excel.py  create_jsonl_dataset.py  create_metadata_index.py  extract_language_subset.py  extract_meetings.py
proceedings_curation/tokenizers/: tokenizers.py
tests/: conftest.py  create_jsonl_dataset_test.py  create_metadata_index_test.py  extract_language_subset_test.py  extract_meetings_test.py  language_filters_test.py  pdfbox_extractor_modified_test.py  tesseract_extractor_modified_test.py  tokenizers_test.py  utils_test.py
tests/extractors/: pdfbox_extractor_modified_test.py  tesseract_extractor_modified_test.py  utils_test.py
tests/language_detectors/: language_detectors_test.py
tests/language_filters/: language_filters_test.py
tests/scripts/: compare_excel_test.py  create_jsonl_dataset_test.py  extract_language_subset_test.py  extract_meetings_test.py
