[tool.poetry]
name = "proceedings-curation"
version = "0.1.0"
description = ""
authors = ["aibakeneko <aibakeneko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
loguru = "^0.7.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
