[tool.poetry]
name = "proceedings-curation"
version = "0.1.0"
description = ""
authors = ["aibakeneko <aibakeneko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
loguru = "^0.7.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
pdf-extract = {git = "https://github.com/inidun/pdf_extract.git"}
fpdf2 = "^2.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311"]