[tool.poetry]
name = "proceedings-curation"
version = "0.1.0"
description = ""
authors = ["aibakeneko <aibakeneko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
loguru = "^0.7.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
pdf-extract = {git = "https://github.com/inidun/pdf_extract.git"}
fpdf2 = "^2.7.6"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.12.0"
mypy = "^1.7.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = false

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false

[tool.pylint.main]
exit-zero = true
ignore-paths = "deprecated"
jobs = 0
persistent = true
py-version = "3.11"
suggestion-mode = true

[tool.pylint.design]
max-args = 8
max-attributes = 14

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120

[tool.pylint.logging]
logging-format-style = "old"

[tool.pylint."messages control"]
extension-pkg-whitelist = "pydantic"
disable = [
    "duplicate-code",
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "pointless-string-statement",
    "global-statement",
    "c-extension-no-member",
    "too-few-public-methods",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "consider-using-enumerate",
    "unnecessary-comprehension",
    "too-many-branches",
    "too-many-locals",
    "wrong-import-order",
    "wrong-spelling-in-comment",
    "wrong-spelling-in-docstring"
]

[tool.pylint.miscellaneous]
notes = ""

[tool.pylint.refactoring]
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.reports]
output-format = "colorized"
score = false